--- a/HarmonicMD.cbp
+++ b/HarmonicMD.cbp
@@ -21,7 +21,7 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-O2" />
+					<Add option="-O3" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -31,7 +31,11 @@
 		<Compiler>
 			<Add option="-std=c++11" />
 			<Add option="-Wall" />
+			<Add option="-fopenmp" />
 		</Compiler>
+		<Linker>
+			<Add library="gomp" />
+		</Linker>
 		<Unit filename="src/classes/MemHandler_class.cpp" />
 		<Unit filename="src/classes/class_header.h" />
 		<Unit filename="src/mainHeader.h" />
